@@ -147,6 +147,7 @@ extern ModuleExport size_t
   RegisterRLAImage(void),
   RegisterRLEImage(void),
   RegisterSCRImage(void),
+  RegisterSCREENSHOTImage(void),
   RegisterSCTImage(void),
   RegisterSFWImage(void),
   RegisterSGIImage(void),
@@ -309,6 +310,7 @@ extern ModuleExport void
   UnregisterRLAImage(void),
   UnregisterRLEImage(void),
   UnregisterSCRImage(void),
+  UnregisterSCREENSHOTImage(void),
   UnregisterSCTImage(void),
   UnregisterSFWImage(void),
   UnregisterSGIImage(void),
